Ising Model Compute Shader

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebGPU Typescript Starter</title>
+    <title>Ising Model simulation</title>
   </head>
   <body>
-    <h1 id="title">WebGPU Typescript Starter</h1>
-    <canvas id="webgpu-canvas" />
+    <canvas  height="600" width="600" id="webgpu-canvas">
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
